# time-banner

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile
.github/workflows/: ci.yml  format.yml
src/: abbr.rs  abbr_tz  abbr_tz.rs  config.rs  duration.rs  error.rs  main.rs  parse.rs  raster.rs  relative.rs  render.rs  routes.rs  separator.rs  svg.rs  template.rs  utils.rs
