[package]
name = "time-banner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.34.1"
axum = "0.6.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.28"
png = "0.17.9"
dotenvy = "0.15.7"
envy = "0.4.2"
tera = "1.19.0"
lazy_static = "1.4.0"
