[package]
name = "time-banner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.34.1"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
png = "0.17.16"
dotenvy = "0.15.7"
envy = "0.4.2"
tera = "1.20.0"
lazy_static = "1.5.0"
timeago = "0.4.2"
chrono-tz = "0.8.6"
phf = { version = "0.11.3", features = ["macros"] }
phf_codegen = "0.11.3"
chrono = "0.4.41"
regex = "1.11.1"

[build-dependencies]
chrono = "0.4.41"
regex = "1.11.1"
phf = { version = "0.11.3", default-features = false }
phf_codegen = "0.11.3"
lazy_static = "1.5.0"
